# RecommendedRevisionsTaqastaDiff

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup_dev.py
src/: __init__.py  cli.py  comparer.py  fetcher.py
tests/: __init__.py  test_cli.py  test_comparer.py  test_fetcher.py  test_regression.py
tests/regression/: canasta.yaml  expected.txt
